Fixed top image form squishing due social media images add last push

--- a/style/index.css
+++ b/style/index.css
@@ -208,6 +208,6 @@ section{
      
   }
 
-.social a, img{
+.mediaimg {
     height: 10rem;
 }
